--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -112,6 +112,7 @@
  
 .bottom-card-padding {
   padding: 0 45px 0 45px;
+  white-space: normal;
 }
  
 .card-additional-info {
